   * maps smaller than the screen are now shown centered on the screen
   * the movement hint now display a "(1)" turn to reach, if the unit
     will use all its movement points to reach this position
   * fixed bug with the number of turns to reach when crossing ZoC
   * allow to choose the direction from where attacking, even when you
     are just near the enemy unit.
 * Miscellaneous and bugfixes
   * fix bug #4299: word wrap for menus with very long option strings
   * various bugfixes and code cleanups
   
Version 1.3.3:
 * campaigns:
   * Northern Rebirth
     * Completed Scenario 'Ray of Hope'.
   * Sceptre of Fire:
     * imported from Wescamp
   * Son of the Black Eye:
     * Merged into mainline for testing.
   * Descent into Darkness
     * added to the pack
     * new Troll Shaman graphics
   * Under the Burning Suns
     * new WML in first and second scenario
     * tweaked second scenario map
     * removed a bunch of custom units
     * removed a bunch of custom terrains
     * new playable unit in scenario 2
     * new dehydration logic in scenario 2
     * new ambush logic in scenario 2
     * new Troll Shaman graphics
   * The South Guard
     * improved Deoran graphics
   * The Rise of Wesnoth
     * new Wose Sapling, Warrior King graphics
 * graphics
   * the leader crown don't hide anymore the top of hp/xp bars (bug #9120)
   * better flag icons for the status bar
   * taller flags that don't get hidden behind units so easily
   * fixed some drawing glitches in the top row (bug #8739 and #8071)
   * it's now possible to zoom in till the theoretical minimum of 4 pixels
     per hex.
   * hp/xp bars in tiny gui have better proportions
 * sound and music:
   * new or revised sounds: troll hit & die
   * added sounds for when a unit is slowed or poisoned
   * added a music track containing only silence (for stopping all music instead
     of just changing it)
 * language and i18n: