@@ -21,6 +21,7 @@ Version 1.3.3+svn:
    * fixed bug with the number of turns to reach when crossing ZoC
    * allow to choose the direction from where attacking, even when you
      are just near the enemy unit.
+   * ability to view a list of MP servers with the Join Game dialog
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
